# gitingest-splitter

./: README.md  pyproject.toml
src/: adaptive_gitingest.py
src/gitingest_splitter/: adaptive_gitingest.py
